@@ -21,6 +21,7 @@ import static org.apache.tuweni.config.PropertyValidator.isURL;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -28,10 +29,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 
+import com.google.common.annotations.VisibleForTesting;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.apache.tuweni.config.Configuration;
 import org.apache.tuweni.config.ConfigurationError;
 import org.apache.tuweni.config.DocumentPosition;
@@ -44,21 +49,33 @@ import org.apache.tuweni.config.SchemaBuilder;
  */
 public class Config {
 
+  private static final Logger log = LogManager.getLogger(Config.class);
+
   private static final Schema SCHEMA = configSchema();
 
   public static Config load(final Path configFile) throws IOException {
-    return load(Configuration.fromToml(configFile, SCHEMA));
+    return load(Configuration.fromToml(configFile, SCHEMA), System.getenv());
   }
 
+  public static Config load(final String config, final Map<String, String> env) {
+    return load(Configuration.fromToml(config, SCHEMA), env);
+  }
+
+  @VisibleForTesting
   public static Config load(final String config) {
-    return load(Configuration.fromToml(config, SCHEMA));
+    return load(Configuration.fromToml(config, SCHEMA), Collections.emptyMap());
   }
 
   public static Config load(final InputStream is) throws IOException {
-    return load(Configuration.fromToml(is, SCHEMA));
+    return load(is, System.getenv());
   }
 
-  private static Config load(final Configuration configuration) {
+  @VisibleForTesting
+  public static Config load(final InputStream is, Map<String, String> env) throws IOException {
+    return load(Configuration.fromToml(is, SCHEMA), env);
+  }
+
+  private static Config load(final Configuration configuration, Map<String, String> env) {
     final List<ConfigurationError> errors = configuration.errors();
     if (!errors.isEmpty()) {
       String errorString = errors.stream().limit(5).map(ConfigurationError::toString).collect(Collectors.joining("\n"));
@@ -67,19 +84,21 @@ public class Config {
       }
       throw new ConfigException(errorString);
     }
-    return new Config(configuration);
+    return new Config(configuration, env);
   }
 
   public static Config defaultConfig() {
-    return new Config(Configuration.empty(SCHEMA));
+    return new Config(Configuration.empty(SCHEMA), System.getenv());
   }
 
   private final Configuration configuration;
   private final Path workDir;
+  private final Map<String, String> env;
 
-  private Config(final Configuration configuration) {
+  private Config(final Configuration configuration, final Map<String, String> env) {
     this.configuration = configuration;
-    this.workDir = Paths.get(configuration.getString("workdir"));
+    this.env = env;
+    this.workDir = Paths.get(getString("workdir"));
   }
 
   /**
@@ -100,7 +119,7 @@ public class Config {
    * @return Port to listen on for the Orion API
    */
   public int nodePort() {
-    return configuration.getInteger("nodeport");
+    return getInteger("nodeport");
   }
 
   /**
@@ -109,7 +128,7 @@ public class Config {
    * @return the network interface to bind the Orion API to
    */
   public String nodeNetworkInterface() {
-    return configuration.getString("nodenetworkinterface");
+    return getString("nodenetworkinterface");
   }
 
   /**
@@ -130,7 +149,7 @@ public class Config {
    * @return Port to listen on for the client API
    */
   public int clientPort() {
-    return configuration.getInteger("clientport");
+    return getInteger("clientport");
   }
 
   /**
@@ -139,7 +158,7 @@ public class Config {
    * @return the network interface to bind the client API to.
    */
   public String clientNetworkInterface() {
-    return configuration.getString("clientnetworkinterface");
+    return getString("clientnetworkinterface");
   }
 
   /**
@@ -149,10 +168,10 @@ public class Config {
    */
   @Nullable
   public Path libSodiumPath() {
-    if (!configuration.contains("libsodiumpath")) {
-      return null;
+    if (contains("libsodiumpath")) {
+      return Paths.get(getString("libsodiumpath"));
     }
-    return Paths.get(configuration.getString("libsodiumpath"));
+    return null;
   }
 
   /**
@@ -176,11 +195,20 @@ public class Config {
    *
    * @return A list of other node URLs to connect to on startup.
    */
-  public List<URL> otherNodes() {
+  public List<URI> otherNodes() {
+    String otherNodes = env.get(envKey("othernodes"));
+    if (otherNodes != null) {
+      try {
+        return Arrays.stream(otherNodes.split(",")).map(URI::create).collect(Collectors.toList());
+      } catch (IllegalArgumentException e) {
+        log.warn("Invalid ORION_OTHERNODES entry", e);
+      }
+    }
+
     return configuration.getListOfString("othernodes").stream().map(urlString -> {
       try {
-        return new URL(urlString);
-      } catch (MalformedURLException e) {
+        return URI.create(urlString);
+      } catch (IllegalArgumentException e) {
         throw new IllegalStateException("key 'othernodes' should have been validated, yet it's invalid", e);
       }
     }).collect(Collectors.toList());
@@ -235,20 +263,20 @@ public class Config {
    * @see #privateKeys()
    */
   public Optional<Path> passwords() {
-    if (!configuration.contains("passwords")) {
-      return Optional.empty();
+    if (contains("passwords")) {
+      return Optional.of(getString("passwords")).map(workDir::resolve);
     }
-    return Optional.of(configuration.getString("passwords")).map(workDir::resolve);
+    return Optional.empty();
   }
 
   /**
    * Storage engine used to save payloads and related information. Options:
    *
    * <ul>
-   * <li>leveldb:path - LevelDB
-   * <li>mapdb:path - MapDB
+   * <li>leveldb:path - LevelDB</li>
+   * <li>mapdb:path - MapDB</li>
    * <li>sql:jdbcurl - Relational database</li>
-   * <li>memory - Contents are cleared when Orion exits
+   * <li>memory - Contents are cleared when Orion exits</li>
    * </ul>
    *
    * <strong>Default:</strong> "leveldb"
@@ -256,7 +284,25 @@ public class Config {
    * @return Storage string specifying a storage engine and/or storage path
    */
   public String storage() {
-    return configuration.getString("storage");
+    return getString("storage");
+  }
+
+  /**
+   * Storage engine used to save known nodes information. Options:
+   *
+   * <ul>
+   * <li>leveldb:path - LevelDB</li>
+   * <li>mapdb:path - MapDB</li>
+   * <li>sql:jdbcurl - Relational database</li>
+   * <li>memory - Contents are cleared when Orion exits</li>
+   * </ul>
+   *
+   * <strong>Default:</strong> "memory"
+   *
+   * @return Storage string specifying a storage engine and/or storage path
+   */
+  public String knownNodesStorage() {
+    return getString("knownnodesstorage");
   }
 
   /**
@@ -277,7 +323,7 @@ public class Config {
    * @see #tlsClientTrust()
    */
   public String tls() {
-    return configuration.getString("tls").toLowerCase();
+    return getString("tls").toLowerCase();
   }
 
   /**
@@ -346,7 +392,7 @@ public class Config {
    * @see #tlsKnownClients()
    */
   public String tlsServerTrust() {
-    return configuration.getString("tlsservertrust").toLowerCase();
+    return getString("tlsservertrust").toLowerCase();
   }
 
   /**
@@ -426,7 +472,7 @@ public class Config {
    * @see #tlsKnownServers()
    */
   public String tlsClientTrust() {
-    return configuration.getString("tlsclienttrust").toLowerCase();
+    return getString("tlsclienttrust").toLowerCase();
   }
 
   /**
@@ -444,7 +490,7 @@ public class Config {
   }
 
   public String clientConnectionTls() {
-    return configuration.getString("clientconnectiontls").toLowerCase();
+    return getString("clientconnectiontls").toLowerCase();
   }
 
   public Path clientConnectionTlsServerCert() {
@@ -460,29 +506,57 @@ public class Config {
   }
 
   public String clientConnectionTlsServerTrust() {
-    return configuration.getString("clientconnectiontlsservertrust").toLowerCase();
+    return getString("clientconnectiontlsservertrust").toLowerCase();
   }
 
   public Path clientConnectionTlsKnownClients() {
     return getPath("clientconnectiontlsknownclients");
   }
 
+  private String envKey(final String key) {
+    return "ORION_" + key.toUpperCase();
+  }
+
+  private boolean contains(final String key) {
+    return env.containsKey(envKey(key)) || configuration.contains(key);
+  }
+
+  private Integer getInteger(final String key) {
+    String valueStr = env.get(envKey(key));
+    if (valueStr != null) {
+      try {
+        return Integer.parseInt(valueStr);
+      } catch (NumberFormatException e) {
+        log.warn(e.getMessage(), e);
+      }
+    }
+    return configuration.getInteger(key);
+  }
+
+  private String getString(final String key) {
+    return env.getOrDefault(envKey(key), configuration.getString(key));
+  }
+
   private Optional<URL> getURL(final String key) {
     try {
-      if (!configuration.contains(key)) {
+      if (!contains(key)) {
         return Optional.empty();
       }
-      return Optional.of(new URL(configuration.getString(key)));
+      return Optional.of(new URL(getString(key)));
     } catch (final MalformedURLException e) {
       throw new IllegalStateException("key '" + key + "' should have been validated, yet it's invalid", e);
     }
   }
 
   private Path getPath(final String key) {
-    return workDir.resolve(configuration.getString(key));
+    return workDir.resolve(getString(key));
   }
 
   private List<Path> getListOfPath(final String key) {
+    String value = env.get(envKey(key));
+    if (value != null) {
+      return Arrays.stream(value.split(",")).map(workDir::resolve).collect(Collectors.toList());
+    }
     return configuration.getListOfString(key).stream().map(workDir::resolve).collect(Collectors.toList());
   }
 
@@ -552,6 +626,17 @@ public class Config {
         "storage",
         "leveldb",
         "Storage engine used to save payloads and related information. Options:\n"
+            + "\n"
+            + "   - leveldb:path - LevelDB\n"
+            + "   - mapdb:path - MapDB\n"
+            + "   - sql:jdbcurl - SQL database\n"
+            + "   - memory - Contents are cleared when Orion exits",
+        Config::validateStorage);
+
+    schemaBuilder.addString(
+        "knownnodesstorage",
+        "memory",
+        "Storage engine used to save known node information. Options:\n"
             + "\n"
             + "   - leveldb:path - LevelDB\n"
             + "   - mapdb:path - MapDB\n"
